# DCNN_backend

./: ANN_model.keras  Gunicorn_config.py  TEST.py  app.py  connect_db.py  flask.conf  min_max_scaler.pkl  pyproject.toml  requirements.txt  run_command.txt  solution.py  uwsgi.ini
model_file/: ANN_model.keras  data.csv  ordina_lencoder.pkl
model_file(DESKTOP-UD4QVEV)/: ordina_lencoder.pkl  空白X特征.csv
